[tool.poetry]
name = "learning-insightface"
version = "0.1.0"
description = ""
authors = ["gomesuit <9404411+gomesuit@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "learning_insightface"}]

[tool.poetry.dependencies]
python = "^3.11"
insightface = "^0.7.3"
onnxruntime = "^1.16.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
